This will prevent labels above inputs from wrapping when translated.

--- a/app/styles/lang/_es.scss
+++ b/app/styles/lang/_es.scss
@@ -197,9 +197,10 @@ body.lang_es {
   #ValueLookupPage {
     .lookup-options {
       .well-title {
-        height: 60px;
+        height: 30px;
       }
     }
+    h4.well-title {font-size:12px;}
   }
 
   /* Modals */
